--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,7 +55,7 @@
     {%- if page.image -%}
       <meta name="twitter:image:src" content="{{ site.url }}/assets/img/{{ page.image }}">
     {%- else -%}
-      <meta name="twitter:image:src" content="{{ '/assets/img/touring.jpg' | prepend: site.url }}">
+      <meta name="twitter:image:src" content="{{ '/assets/img/christmas_beer.jpg' | prepend: site.url }}">
     {%- endif -%}
 
 
