--- a/css/style.css
+++ b/css/style.css
@@ -801,7 +801,7 @@ HEADER STYLING
 ***************/
 .header {
   background-color: seagreen;
-  background-image: url("../img/touring.jpg");
+  background-image: url("../img/christmas_beer.jpg");
   background-size: cover;
   background-position: center center;
   color: white;
