--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,11 @@ layout: default
       </div>
   {%- endif -%}
   <h1 class="postTitle">{{ page.title }}</h1>
-  <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
+  <p class="meta">{{ page.date | date: '%d %B %Y' }} 
+  {%- if page.author -%} 
+  | Door {{ page.author }}
+  {%- endif -%} 
+  </p>
   
   {{ content }}
 
