--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <a href="/">
                 {{ site.title }}
                 {%- if page.date -%}
-                    ({{ page.date | date: '%Y' }} )
+                <br />Editie {{ page.date | date: '%Y' }}
                 {%- endif -%}            
             </a>
         </h1>
